Добавил меню к джаинту

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 .main-menu ul li {
     /* Оформление */
     list-style: none;
-    background-color: #BAF466; /*пригодится позже*/
+    background-color: #BAF466; /*пойдет кровь из глаз?*/
     border-radius: 3px; /*пригодится позже*/
 }
 
