--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,20 @@ body {
 
 .features ul {
     /* Типографика */
-    font-size: 14px;
+    font-size: 15px;
 
     /* Оформление */
-    color: #707070;
+    color: #5c7734;
     list-style-image: url(../img/wheel-icon.png);
-    list-style-position: 50% 50%;
+}
+
+.detailed-description {
+    /* Типографика */
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+
+    /* Оформление */
+    color: #484343;
 }
