--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
     font-size: 15px;
 
     /* Оформление */
-    color: #ac691a;
+    color: #765c3f;
     list-style-image: url(../img/wheel-icon.png);
     line-height: 24px;
 }
