--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,10 @@ body {
     border-bottom: 1px solid #000;
 }
 
+.frame-geometry table tr:first-child {
+    height: 35px;
+}
+
 .frame-geometry table tr .double-header {
     text-transform: uppercase;
 }
