--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@ body {
     background-color: #f8f8f8;
 }
 
+.container {
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.page-header {
+    min-width: 200px;
+}
+
 .main-menu ul li {
     /*Блочная модель*/
     width: 100px;
