Добавил классы для левой и правой колонок сетки

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@ body {
     clear: both;
 }
 
+.left-col {
+    float: left;
+}
+
+.right-col {
+    float: right;
+}
+
 .page-header {
     min-height: 100px;
 
