--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,13 @@ body {
 
     /*Типографика*/
     font-size: 0;
+    text-decoration: none;
     line-height: 25px;
     vertical-align: middle;
 
     /*Оформление*/
     background: url(../img/social-icons.png) no-repeat transparent;
+    outline: none;
 
     /*Анимация*/
     transition: background-position 0.5s;
@@ -120,10 +122,7 @@ body {
 
 .main-menu ul li {
     /*Блочная модель*/
-    width: 100px;
-    height: 35px;
     display: inline-block;
-    border-radius: 5px;
     margin-right: 10px;
 
     /*Типографика*/
@@ -131,15 +130,6 @@ body {
 
     /* Оформление */
     list-style: none;
-    background-color: #ff8c00;
-}
-
-.main-menu ul .active-page {
-    background-color: #ff4500;
-}
-
-.main-menu ul li:hover {
-    background-color: #ff4500;
 }
 
 .main-menu ul li:last-child {
@@ -147,15 +137,30 @@ body {
 }
 
 .main-menu ul li a {
+    /*Блочная модель*/
+    display: block;
+    width: 100px;
+    height: 35px;
+    border-radius: 5px;
+
     /* Типографика */
     font-size: 1.1em;
     line-height: 35px;
     vertical-align: middle;
 
     /* Оформление */
+    background-color: #ff8c00;
     color: #fff;
     text-decoration: none;
     outline: none;
+}
+
+.main-menu ul .active-page a {
+    background-color: #ff4500;
+}
+
+.main-menu ul li a:hover {
+    background-color: #ff4500;
 }
 
 .main-item-image {
