одинаковый хедер на всех страницах, подправил ссылки, изменил стиль для активной стр

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ body {
     outline: none;
 }
 
-.main-menu ul .active-page a {
+.main-menu ul li .active-page {
     background-color: #ff4500;
 }
 
