--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,6 @@ body {
 }
 
 .short-description {
-    float: right;
     max-width: 520px;
 }
 
@@ -250,9 +249,14 @@ body {
     line-height: 24px;
 }
 
+.frame-geometry img {
+    display: block;
+    margin: 0 auto;
+}
+
 .frame-geometry table {
     border-collapse: collapse;
-    margin: 30px 0;
+    margin: 30px auto;
 }
 
 .frame-geometry table tr {
