Добавил кнопки купить

--- a/css/style.css
+++ b/css/style.css
@@ -248,8 +248,9 @@ body {
 .btn {
     /*Блочная модель*/
     display: inline-block;
-    padding: 5px 10px;
+    padding: 5px 15px;
     margin-right: 10px;
+    margin-bottom: 20px;
     border-radius: 5px;
 
     /*Типографика*/
@@ -263,7 +264,12 @@ body {
 }
 
 .btn:hover {
-    background-color: #6be81c;
+    /*Типографика*/
+    font-weight: 700;
+
+    /*Оформление*/
+    background-color: #b6ed93;
+    color: #4d4d4d;
 }
 
 .btn:active {
