--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     clear: both;
 }
 
+.row {
+  width: 100%;
+}
+
 .left-col {
     float: left;
 }
@@ -31,6 +35,10 @@ body {
     min-height: 100px;
 
     background: #262626;
+}
+
+.logo {
+    margin-bottom: 5%;
 }
 
 .social {
@@ -148,6 +156,30 @@ body {
 }
 
 .main-menu ul li a:hover {
+    background-color: #ff4500;
+}
+
+.user-block {
+    text-align: center;
+}
+
+.user-block a {
+    display: inline-block;
+    width: 100px;
+    height: 35px;
+    border-radius: 5px;
+
+    font-size: 1.1em;
+    line-height: 35px;
+    vertical-align: middle;
+
+    background-color: #ff8c00;
+    color: #fff;
+    text-decoration: none;
+    outline: none;
+}
+
+.user-block a:hover {
     background-color: #ff4500;
 }
 
