--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,33 @@ body {
     background-color: #ff4500;
 }
 
+.intro .greeting {
+    margin-bottom: 5%;
+
+    font-style: italic;
+    font-size: 20px;
+
+    color: #4d4d4d;
+}
+
+.intro video {
+    margin-left: 3%;
+    margin-bottom: 3%;
+}
+
+.intro-features {
+    margin-right: 3%;
+}
+
+.intro-features ul {
+    font-size: 18px;
+}
+
+.key-features .feature-1 p {
+    overflow: hidden;
+    padding-left: 3%;
+}
+
 .catalog-item {
     display: inline-block;
     width: 240px;
