--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #f8f8f8;
 }
 
+.box {
+    min-height: calc(100vh - 66px);
+}
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
