--- a/css/style.css
+++ b/css/style.css
@@ -173,19 +173,37 @@ h1 {
 }
 
 .user-block a {
-    display: inline-block;
-    width: 100px;
-    height: 35px;
+    position: relative;
+    
+    display: block;
+    padding: 0 15px;
+    padding-left: 40px;
     border-radius: 5px;
 
     font-size: 1.1em;
     line-height: 35px;
-    vertical-align: middle;
 
     background-color: #ff8c00;
     color: #fff;
     text-decoration: none;
     outline: none;
+}
+
+.user-block a::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    
+    width: 25px;
+    height: 25px;
+    
+    background: url('../img/forms.png') 0 0;
+    opacity: 0.4;
+}
+
+.user-block a:hover::before {
+    opacity: 1;
 }
 
 .user-block a:hover {
@@ -553,4 +571,232 @@ fieldset button:hover {
 .page-footer .social {
     float: right;
     margin: 0;
+}
+
+/* Всплывающая форма */
+
+.modal-content {
+  position: fixed;
+  top: 120px;
+  left: 50%;
+  z-index: 30;
+
+  display: none;
+  width: 300px;
+  padding: 50px 80px;
+  margin-left: -230px;
+
+  color: #000;
+  background: #f8f8f8;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+.modal-content-show {
+  display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-overlay-show {
+    display: block;
+}
+
+.modal-content-close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+
+  width: 22px;
+  height: 22px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.modal-content-close::before,
+.modal-content-close::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+  background-color: #d0d0d0;
+  border-radius: 1px;
+}
+
+.modal-content-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-content-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-content h2 {
+  margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.modal-content p {
+  margin: 0;
+  margin-bottom: 14px;
+}
+
+.modal-content .login-form {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+  width: 236px;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  padding-right: 40px;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Serif", "Times New Roman", serif;
+  color: #000;
+  text-transform: uppercase;
+
+  background-color: #f9f9f9;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.login-form input:focus {
+  border-color: #ff8c00;
+}
+
+.login-form input.icon-user {
+
+}
+
+.login-form input.icon-password {
+
+}
+
+.login-form .restore {
+  float: right;
+
+  color: #000000;
+}
+
+.login-form .btn {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    margin-top: 15px;
+    
+    text-align: center;
+}
+
+.login-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.login-checkbox {
+  position: relative;
+
+  padding-left: 30px;
+
+  cursor: pointer;
+}
+
+.login-checkbox:hover {
+  color: #663d15;
+}
+
+.login-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: -3px;
+  left: 0;
+
+  width: 17px;
+  height: 17px;
+
+  border: 2px solid #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before,
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 1px;
+
+  width: 15px;
+  height: 2px;
+
+  background-color: #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+  transform: rotate(45deg);
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  transform: rotate(-45deg);
+}
+
+/*Анимация*/
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0, 100% {
+    transform: translateX(0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-10px);
+  }
+
+  20%, 40%, 60%, 80% {
+    transform: translateX(10px);
+  }
 }
