--- a/css/style.css
+++ b/css/style.css
@@ -674,10 +674,14 @@ fieldset button:hover {
   margin-bottom: 10px;
 }
 
+.login-form {
+	margin: 0 auto;
+}
+
 .login-form input[type="text"],
 .login-form input[type="password"] {
-  width: 236px;
-  margin: 0;
+  width: 78%;
+  margin: 0 auto;
   margin-bottom: 10px;
   padding: 10px 20px;
   padding-right: 40px;
