--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,74 @@ h1 {
     font-size: 18px;
 }
 
+.catalog-selector {
+    width: 150px;
+}
+
+.catalog-selector fieldset {
+    border: none;
+}
+
+.catalog-selector legend {
+    margin-bottom: 20px;
+    
+    font-weight: 700;
+}
+
+.catalog-selector label {
+    position: relative;
+    
+    display: block;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    
+    cursor: pointer;
+}
+
+.catalog-selector input[type="checkbox"] {
+    width: auto;
+    display: none;
+}
+
+.catalog-selector .marker-indicator {
+    position: absolute;
+    left: 0;
+    top: 3px;
+    
+    width: 12px;
+    height: 12px;
+    
+    border: 2px solid #262626;
+}
+
+.catalog-selector input[type="checkbox"]:checked + .marker-indicator::before {
+    content: ""; 
+    position: absolute;
+    top: 2px;
+    left: 1px;
+    
+    width: 18px;
+    height: 4px;
+    
+    background: #4ec900; 
+    
+    transform: rotate(-60deg);
+}
+
+.catalog-selector input[type="checkbox"]:checked + .marker-indicator::after {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: -5px;
+    
+    width: 15px;
+    height: 4px;
+    
+    background: #4ec900; 
+    
+    transform: rotate(45deg);
+}
+
 .catalog-item {
     display: inline-block;
     width: 240px;
