--- a/css/style.css
+++ b/css/style.css
@@ -369,13 +369,15 @@ h1 {
 .catalog-list {
     width: calc(100% - 200px);
     max-width: 750px;
+    
+    font-size: 0;
 }
 
 .catalog-item {
     display: inline-block;
     width: 29.33%;
     padding: 1.33%;
-    margin-right: 1.33;
+    margin-right: 1%;
     border-radius: 5px;
 
     vertical-align: top;
@@ -385,6 +387,10 @@ h1 {
     color: inherit;
     
     transition: transform ease-in-out 0.6s;
+}
+
+.catalog-item h3 {
+    font-size: 18px;
 }
 
 .catalog-item:nth-of-type(3n) {
