--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,36 +1,34 @@
 @media screen and (min-width: 721px) and (max-width: 960px) {
     .news-item {
-	    width: 24.25%;
+	width: 24.25%;
     }
 
     .news-item:nth-of-type(4n) {
-	    margin-right: 0;
+	margin-right: 0;
     }
 }
 
 @media screen and (min-width: 496px) and (max-width: 720px) {
     .news-item {
-	    width: 32.66%;
+	width: 32.66%;
     }
 
     .news-item:nth-of-type(3n) {
-	    margin-right: 0;
+	margin-right: 0;
     }
-}
-
-@media screen and (max-width: 495px) {
-    .news-item {
-	    width: 49.5%;
+    
+    .catalog-item {
+        width: 46%;
     }
-
-    .news-item:nth-of-type(2n) {
-	    margin-right: 0;
+    
+    .catalog-item:nth-of-type(2n) {
+        margin-right: 0;
     }
 }
 
 @media screen and (max-width: 960px) {
     .news-item:nth-of-type(5n) {
-	    margin-right: 1%;
+	margin-right: 1%;
     }
 }
 
@@ -41,6 +39,10 @@
 
     .logo img {
         width: 90%;
+    }
+    
+    .catalog-item:nth-of-type(3n) {
+        margin-right: 1%;
     }
 }
 
@@ -116,7 +118,11 @@
 
 @media screen and (max-width: 550px) {
     .modal-content h2 {
-	    font-size: 22px;
+	font-size: 22px;
+    }
+    
+    .catalog-item h3 {
+        font-size: 16px;
     }
 }
 
@@ -146,11 +152,30 @@
         float: left;
         margin-bottom: 80px;
     }
+    
+    .news-item {
+	width: 49.5%;
+    }
+
+    .news-item:nth-of-type(2n) {
+	margin-right: 0;
+    }
+    
+    .catalog-item {
+        width: 90%;
+        margin-right: 0;
+    }
 }
 
 @media screen and (max-width: 480px) {
     .logo {
         width: 336px;
+    }
+    
+    h1 {
+        margin-top: 0;
+        
+        font-size: 24px;
     }
 
     .intro .greeting {
@@ -177,6 +202,21 @@
     }
 
     .btn {
-	    font-size: 12px;
+	font-size: 12px;
+    }
+    
+    .catalog-list {
+        width: calc(100% - 42%);
+    }
+    
+    .catalog-selector {
+        width: 37.5%;
+        margin-right: 4%;
+        
+        font-size: 14px;
+    }
+    
+    .catalog-selector legend {
+        font-size: 16px;
     }
 }
