--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -44,6 +44,17 @@
     .catalog-item:nth-of-type(3n) {
         margin-right: 1%;
     }
+
+    .geometry-content-image {
+        float: none;
+        width: 80%;
+        margin: auto;
+    }
+
+    .geometry-content-params {
+        float: none;
+        width: 100%
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -92,6 +103,14 @@
 
     .login-form .restore {
         float: left;
+    }
+
+    .main-item-image {
+        float: none;
+        display: block;
+        width: 75%;
+        margin: 0 auto;
+        margin-bottom: 20px;
     }
 }
 
