--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -60,6 +60,7 @@
 @media screen and (max-width: 640px) {
     h2 {
         font-size: 22px;
+        line-height: 28px;
     }
 
     .main-menu {
@@ -91,13 +92,23 @@
     }
 
     .modal-content {
-	    width: 45%;
-        margin-left: -36%;
-        padding: 5% 10%;
+	width: 45%;
+        margin-left: -30%;
+        padding: 2% 5%;
+    }
+    
+    .modal-content .login-form {
+        margin-top: 0;
+    }
+    
+    .modal-content h2{
+        margin-bottom: 5%;
+        
+        line-height: 28px;
     }
 
     .login-form .login-checkbox {
-	    float: left;
+	float: left;
         width: 100%;
     }
 
@@ -131,7 +142,7 @@
 
     .login-form input[type="text"],
     .login-form input[type="password"] {
-        padding: 5% 10%;
+        padding: 2% 5%;
     }
 }
 
